[gd_scene load_steps=10 format=2]

[ext_resource path="res://Loony Lips.gd" type="Script" id=1]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="Loony Lips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 976.0
margin_bottom = 474.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder data"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 479.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 12
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 832.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 844.0
margin_right = 917.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 929.0
margin_top = 5.0
margin_right = 976.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "ok"

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "an adjective" )
story = "Twas the night before christmas, and %s watched %s. 'This is the %s', he said."

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a location", "a food item", "a person you know" )
story = "Back in %s, your boy ate himself up some %s and almost killed %s in the process"

[node name="Story2" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a person", "an animal", "a pokemon", "an avatar" )
story = "WOAH! When %s was eating some potatoes, I saw a %s fight a %s, then realized I was dreaming with %s."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
